webapp/src/components/modals/styles/preview-modal.scss
@import '../../global-styles/vars/';
@import '../../global-styles/mixins/';

.preview-modal {
  $b: &;

  @include size(100%);
  @include flex();
  position: relative;
  z-index: 999;

  // EVERYTHING TOPBAR

  &__topbar {
    @include flex(center, flex-start);
    @include size(100%, 54px);
    border-bottom: 1px solid $deepBlue-90;
    left: 0; top: 0;
    position: absolute;
  }

  &__close {
    @include flex();
    @include size(46px);
    border-radius: 50%;
    margin-left: 15px;

    &:hover {
      background-color: #333d59;
    }
  }

  &__title {
    color: $bg;
    font-size: 15px;
    font-weight: 500;

    &--topbar {
      margin-left: 9px;
    }

    &--action {

    }

    &--empty {
      font-size: 21px;
      margin-bottom: 60px;
    }
  }

  &__actions {
    @include flex(flex);
    position: absolute;
    right: 60px;
  }

  &__action {
    @include flex();
    @include size(46px);
    border-radius: 50%;
    position: relative;

    // DROPDOWN

    &:before {
      background-color: $deepBlue-120;
      border: 1px solid #333d58;
      bottom: 0;
      color: $bg;
      content: attr(data-content);
      display: none;
      min-width: 150px;
      padding: 15px 12px;
      position: absolute;
      text-align: center;
      transform: translateY(calc(100% + 18px));
    }

    &:after {
      @include size(15px);
      background-color: $deepBlue-120;
      border: 1px solid #333d58;
      border-bottom: none;
      border-right: none;
      bottom: 0;
      content: "";
      display: none;
      position: absolute;
      transform: translateY(calc(100% + 10px)) rotate(45deg);
    }

    &:hover {
      background-color: #333d59;

      &:before, &:after {
        display: block;
      }
    }
  }

  // EVERYTHING CONTENT

  &__pdf {
    display: none;
    height: calc(100vh - 54px);
    margin-top: 54px;
    max-height: calc(100vh - 54px);
    max-width: 70vw;
    overflow-y: scroll;
    position: relative;

    &::-webkit-scrollbar {
      background-color: rgba(white,0);
      overflow: hidden;
      width: 10px;
    }

    &::-webkit-scrollbar-thumb {
      background-color: rgba($bg,.5);
    }

    &--shown {
      display: block;
    }
  }

  &__image {
    @include size(100%);
    @include flex();
    display: none;

    img {
      background-color: #fff;
      max-height: 70vh;
      max-width: 70vw;
    }

    &--shown {
      display: flex;
    }
  }

  &__empty {
    @include size(100%);
    @include flex(center, center, column);
  }

  // ICONS

  &__icon {
    @include size(24px);
    fill: $bg;

    &:hover {
      background-color: #333d59;
    }
  }

  // MODIFIERS

  &--empty {
    #{$b}__topbar {

      & > *:not(#{$b}__close) {
        display: none;
      }
    }

    #{$b}__actions {
      @include flex(flex);
      border: 1px solid $bg;
      position: relative;
      right: auto;
    }

    #{$b}__action {
      @include size(300px);
      @include flex(center, center, column);
      border-radius: 0;

      &:not(:last-child) {
        border-right: 1px solid $bg;
      }

      &:before, &:after {
        display: none;
      }

      &:hover {

      }

      #{$b}__icon {
        @include size(48px);
        margin-bottom: 30px;
      }
    }
  }
}

